<!--
  ~ Copyright (C) 2019 Andika Wasisto
  ~
  ~ This file is part of OpenSIAK.
  ~
  ~ OpenSIAK is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OpenSIAK is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OpenSIAK.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="opensiak" translatable="false">OpenSIAK</string>
    <string name="starting_error_message">Something went wrong while starting the application. Try to clear application data.</string>
    <string name="something_went_wrong">Something went wrong. Check your internet connection.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="try_again">Try again</string>
    <string name="sign_in">Sign in</string>
    <string name="with_your_ui_account">with your UI account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="about_opensiak">About OpenSIAK</string>
    <string name="about_activity_title">About</string>
    <string name="version_text">Version %s</string>
    <string name="copyright_notice" translatable="false">&#169; 2019 Andika Wasisto</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="source_code">Source code</string>
    <string name="privacy_policy_url">https://awasisto.github.io/opensiak/privacy-policy</string>
    <string name="source_code_url" translatable="false">https://github.com/awasisto/opensiak</string>
    <string name="open_navigation_drawer">Open navigation menu</string>
    <string name="close_navigation_drawer">Close navigation menu</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_confirmation_dialog_message">Are you sure you want to sign out?</string>
    <string name="sign_out_error_message">Something went wrong while signing you out. Try to clear application data.</string>
    <string name="academic">Academic</string>
    <string name="course_plan">Course plan</string>
    <string name="summary">Summary</string>
    <string name="cgpa">CGPA</string>
    <string name="cgpa_text" translatable="false">%.2f</string>
    <string name="total_credits_earned">Total credits earned</string>
    <string name="total_credits_earned_text" translatable="false">%d</string>
    <string name="grade_statistics">Grade statistics</string>
    <string name="grade">Grade</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="academic_year">Academic year</string>
    <string name="term">Term</string>
    <string name="status">Status</string>
    <string name="class_schedule">Class schedule</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="room_text">Room %s</string>
    <string name="no_classes">No classes</string>
</resources>
