<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Andika Wasisto
  ~
  ~ This file is part of OpenSIAK.
  ~
  ~ OpenSIAK is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OpenSIAK is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OpenSIAK.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/academic">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/navigation_academic_summary"
                        android:icon="@drawable/ic_summary"
                        android:title="@string/summary"/>

                    <item
                        android:id="@+id/navigation_payment_info"
                        android:icon="@drawable/ic_payment_info"
                        android:title="@string/payment"/>
                </group>
            </menu>
        </item>

        <item android:title="@string/course_plan">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/navigation_course_plan_schedule"
                        android:icon="@drawable/ic_schedule"
                        android:title="@string/schedule"/>
                </group>
            </menu>
        </item>
    </group>

    <group>
        <item
            android:id="@+id/navigation_about"
            android:title="@string/about_opensiak"/>
    </group>
</menu>