<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Andika Wasisto
  ~
  ~ This file is part of OpenSIAK.
  ~
  ~ OpenSIAK is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OpenSIAK is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OpenSIAK.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.wasisto.opensiak.ui.siak.paymentinfo.PaymentInfoViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshingWhen="@{viewModel.isLoading}">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true"
                    app:goneUnless="@{viewModel.shouldShowPaymentInfoTable}">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="105dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:text="@string/academic_year"
                                android:fontFamily="sans-serif-medium"/>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/table_border"/>

                            <TextView
                                android:layout_width="34dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="16dp"
                                android:gravity="center_horizontal"
                                android:text="@string/term"
                                android:fontFamily="sans-serif-medium"/>

                            <View
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="@color/table_border"/>

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_margin="16dp"
                                android:gravity="end"
                                android:text="@string/status"
                                android:fontFamily="sans-serif-medium"/>
                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/academicYearsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            app:paymentInfoAcademicYears="@{viewModel.academicYears}"
                            tools:listitem="@layout/item_payment_info_academic_year"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include
            layout="@layout/layout_error"
            app:shouldShowError="@{viewModel.shouldShowError}"
            tools:visibility="gone"/>
    </FrameLayout>
</layout>
