<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Andika Wasisto
  ~
  ~ This file is part of OpenSIAK.
  ~
  ~ OpenSIAK is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ OpenSIAK is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with OpenSIAK.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.wasisto.opensiak.ui.siak.academicsummary.AcademicSummaryViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:focusableInTouchMode="true">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:refreshingWhen="@{viewModel.isLoading}">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical"
                    app:goneUnless="@{viewModel.shouldShowSummary}">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardPreventCornerOverlap="false"
                        app:cardUseCompatPadding="true">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="136dp"
                            android:src="@drawable/header_background"
                            android:scaleType="centerCrop"
                            tools:ignore="ContentDescription"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="152dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:fontFamily="@font/nunito_sans_semibold"
                                android:textColor="?android:textColorPrimary"
                                android:textSize="24sp"
                                android:text="@{viewModel.studentName}"
                                tools:text="Ali Connors"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:gravity="center_horizontal"
                                android:text="@{viewModel.majorAndDegree}"
                                tools:text="Computer Science Undergraduate"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginBottom="16dp"
                                android:background="?android:listDivider"/>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:orientation="horizontal"
                                android:baselineAligned="false">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/cgpa"
                                        android:maxLines="1"
                                        android:ellipsize="end"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind"
                                        android:textSize="27sp"
                                        android:textColor="?android:textColorPrimary"
                                        android:text="@{@string/cgpa_text(viewModel.cgpa)}"
                                        tools:text="3.01"/>
                                </LinearLayout>

                                <View
                                    android:layout_width="16dp"
                                    android:layout_height="0dp"/>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/total_credits_earned"
                                        android:maxLines="1"
                                        android:ellipsize="end"/>

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/hind"
                                        android:textSize="27sp"
                                        android:textColor="?android:textColorPrimary"
                                        android:text="@{@string/total_credits_earned_text(viewModel.totalCreditsEarned)}"
                                        tools:text="102"/>
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="112dp"
                            android:layout_height="112dp"
                            android:layout_marginTop="40dp"
                            android:layout_gravity="center_horizontal"
                            android:elevation="4dp"
                            app:civ_border_width="4dp"
                            app:civ_border_color="@android:color/white"
                            app:photoData="@{viewModel.studentPhotoData}"/>
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/grade_statistics"
                        android:textColor="?android:textColorPrimary"
                        android:textSize="16sp"
                        android:fontFamily="sans-serif-medium"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="start"
                                    android:text="@string/grade"
                                    android:fontFamily="sans-serif-medium"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="end"
                                    android:text="@string/total"
                                    android:fontFamily="sans-serif-medium"/>
                            </FrameLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="?android:listDivider"/>

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/gradeCountsRecyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                app:gradeCounts="@{viewModel.gradeCounts}"
                                tools:listitem="@layout/item_grade_count"/>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <include
            layout="@layout/layout_error"
            app:shouldShowError="@{viewModel.shouldShowError}"
            tools:visibility="gone"/>
    </FrameLayout>
</layout>
